# kubernetes-offline

./: .gitlab-ci.yml  .rpmmacros  Dockerfile  Makefile.am  README.md  ansible.cfg  build-rpm.sh  build.sh  configure.ac  kubernetes-offline.spec  set-version-release.sh
playbooks/: kubernete-test.yml
roles/core-kubernetes/tasks/: main.yml
roles/kubernetes-core/handlers/: main.yml
roles/kubernetes-core/tasks/: main.yml
roles/kubernetes-master/tasks/: dashboard.yaml  init.yaml  main.yml
roles/kubernetes-master/templates/: dashboard-adminuser.yaml.j2  dashboard.yaml.j2
roles/kubernetes-test/tasks/: main.yml
